# rustbotcopy

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  main.rs
src/commands/: my_cmds.rs
src/commands/my_cmds/: fun.rs  math.rs  modcmd.rs  other.rs
