[package]
name = "rustbot"
version = "0.1.0"
authors = ["Jared Dana, William Haugen", "Justin Crawford"]
edition = "2018"

[dependencies]
serenity = "0.5.13"
rand = "0.6"
image = "0.21.1"

# Fixes issues on Arch Linux
[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x"  }
